--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,10 @@
+body {
+  font: 1em sans-serif;
+  width: 200px;
+  padding: 0;
+  margin: 0 auto;
+}
+
 form{
   display: flex;
   flex-direction: column;
@@ -10,5 +17,38 @@ form{
 
 input,
 select{
+  height:0.5vh+30px;
   margin-left: 10px;
+  margin-bottom: 50px;
+}
+
+::-webkit-inner-spin-button,
+::-webkit-outer-spin-button{
+  appearance: none;
+}
+
+input:invalid {
+  border-color: #900;
+  background-color: #fdd;
+}
+
+input:focus:invalid {
+  outline: none;
+}
+
+/* error message styles */
+.error {
+  height: 100%;
+  padding: 0;
+
+  font-size: 80%;
+  color: white;
+  background-color: #900;
+  border-radius: 0 0 5px 5px;
+
+  ;
+}
+
+.error.active {
+  padding: 0.3em;
 }
